--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -607,6 +607,9 @@ query_entries() {
           (emms-playlist-mode-play-current-track)))))))
 #+end_src
 * elfeed
+#+begin_src elisp :tangle packages.el
+(package! elfeed-goodies :disable t)
+#+end_src
 #+begin_src elisp
 (defun elfeed-open-special ()
   "Open videos directly."
@@ -627,8 +630,10 @@ query_entries() {
   (add-hook 'elfeed-show-mode-hook (lambda () (setq-local browse-url-generic-program "qutebrowser-background")))
 
   (setq elfeed-search-filter "@2-week-ago +unread -youtube"
-        elfeed-show-entry-switch (lambda (buf) (display-buffer-below-selected buf nil) (select-window (get-buffer-window buf))))
+        elfeed-show-entry-switch #'display-buffer)
 
+  (def-modeline! 'elfeed '("Elfeed") '())
+  (set-modeline-hook! '(elfeed-search-mode-hook) 'elfeed)
   (evil-define-key 'normal elfeed-search-mode-map
     (kbd "RET") 'elfeed-open-special))
 #+end_src
